--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,6 +47,6 @@
     ]
   },
   "resolutions" :{
-    "nth-check":"2.0.1"
+    "nth-check":">=2.0.1"
   }
 }
